--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,4 +1,3 @@
-/* Navbar.css */
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -33,6 +32,7 @@
   color: #ffb300;
 }
 
+/* Mobile styles */
 @media (max-width: 700px) {
   .navbar {
     flex-direction: column;
@@ -52,5 +52,6 @@
     display: block;
     width: 100%;
     padding: 0.5rem 0;
+    font-size: 1.1rem;
   }
 }
